Fix align menu right break mobile menu

--- a/styles/rightalign.css
+++ b/styles/rightalign.css
@@ -28,7 +28,7 @@
 @media only screen and (max-width: 767px) {
     /* Change mobile nav to fixed */
 	#header #navigation {
-		position: fixed !important;
+		top: -40px;
 	}
 }
 
